# huereader

./: Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: rust.yml
src/: hue_client.rs  influx_db_client.rs  main.rs  model.rs
src/hue_client/: hue_client.rs
src/influx_db_client/: influx_db_client.rs
src/model/: model.rs
