[package]
name = "huereader"
version = "0.1.0"
authors = ["dariusjs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls", "json"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
