[package]
name = "huereader"
version = "0.1.0"
authors = ["dariusjs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls", "json"] }
tokio = { version = "^1.0", features = ["full", "tracing"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "^0.10.0"
log = "^0.4"
