[package]
name = "huereader"
version = "0.2.1"
authors = ["dariusjs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.14", features = ["rustls-tls", "json"] }
tokio = { version = "^1.25.0", features = ["full", "tracing"] }
serde_json = "^1.0.91"
serde = { version = "^1.0.152", features = ["derive"] }
openssl = { version = "^0.10.45", features = ["vendored"] }
env_logger = "^0.10.0"
log = "^0.4.17"
